tests/error/extend_typedef2.gw
// [contains] cannot extend typedef'd array
typedef Object[] Class;
class C extends Class {}
C c;
<<<c>>>;
